--- a/source/_posts/从排序数组中删除重复项.md
+++ b/source/_posts/从排序数组中删除重复项.md
@@ -5,7 +5,7 @@ categories: Leetcode
 ---
 
 ## 解题和思考
-上面有提需要在原地删除重复出现的数据，并有提示可以使用**[原地算法](https://zh.wikipedia.org/wiki/%E5%8E%9F%E5%9C%B0%E7%AE%97%E6%B3%95)**。根据百科的说法，我个人认为**原地算法就是不使用额外的空间和变量去转变数据**。
+上面有提需要在原地删除重复出现的数据，并有提示可以使用**[原地算法](https://zh.wikipedia.org/wiki/%E5%8E%9F%E5%9C%B0%E7%AE%97%E6%B3%95)**。
 
 那么问题既然不能使用额外的空间去转变数据，那么可以尝试遍历数组去交换重复的数据。
 
