--- a/source/_posts/从排序数组中删除重复项.md
+++ b/source/_posts/从排序数组中删除重复项.md
@@ -5,18 +5,18 @@ categories: Leetcode
 ---
 
 ## 解题和思考
+
 上面有提需要在原地删除重复出现的数据，并有提示可以使用**[原地算法](https://zh.wikipedia.org/wiki/%E5%8E%9F%E5%9C%B0%E7%AE%97%E6%B3%95)**。
 
 那么问题既然不能使用额外的空间去转变数据，那么可以尝试遍历数组去交换重复的数据。
 
-  - 如果数组长度为 0、1，不需要处理。
-  - 数组第一条不需要处理，可以设置初始下标为1。
-  - 遍历比较数组的值，如果不相等则进行交换
-  - 记录交换次数，使用交换次数输出不重复数据
-
+- 如果数组长度为 0、1，不需要处理。
+- 数组第一条不需要处理，可以设置初始下标为1，默认交换次数也为1。
+- 遍历比较数组的值，如果不相等则进行交换
+- 交换一次交换次数加1，交换次数作为待交换数据的下标。
 
 ```java
-	public int removeDuplicates(int[] nums) {
+    public int removeDuplicates(int[] nums) {
         if (nums.length >= 2) {
             int count = 1;
             for (int i = 1; i < nums.length; i++) {
@@ -27,8 +27,25 @@ categories: Leetcode
             return count;
         }
         return nums.length;
-	}
+    }
+```
+
+*output*
+
+```bash
+nums = [0, 0, 1, 1, 1, 2, 2, 3, 3, 4]
+
+[0, 0, 1, 1, 1, 2, 2, 3, 3, 4]
+[0, 1, 1, 1, 1, 2, 2, 3, 3, 4]
+[0, 1, 1, 1, 1, 2, 2, 3, 3, 4]
+[0, 1, 1, 1, 1, 2, 2, 3, 3, 4]
+[0, 1, 2, 1, 1, 2, 2, 3, 3, 4]
+[0, 1, 2, 1, 1, 2, 2, 3, 3, 4]
+[0, 1, 2, 3, 1, 2, 2, 3, 3, 4]
+[0, 1, 2, 3, 1, 2, 2, 3, 3, 4]
+[0, 1, 2, 3, 4, 2, 2, 3, 3, 4]
 ```
 
 ## 题目地址
+
 [从排序数组中删除重复项](https://leetcode-cn.com/explore/interview/card/top-interview-questions-easy/1/array/21/)
