add find single number

--- a/source/_posts/旋转数组.md
+++ b/source/_posts/旋转数组.md
@@ -4,6 +4,8 @@ date: 2019-05-29 17:51:22
 tags: LeetCode
 ---
 
+题目：[旋转数组](https://leetcode-cn.com/problems/rotate-array/)
+
 ### 解法1
 
 取出数组最后一个元素，数组所有元素向后挪动一位，数组第一个元素替换为取出的最后一个元素。
