--- a/source/_posts/找到只出现一次的数字.md
+++ b/source/_posts/找到只出现一次的数字.md
@@ -10,17 +10,9 @@ tags: LeetCode
 
 暴力解决，直接对每一个元素进行比较，看看是否有只出现一次的数字
 
-时间复杂度：
+时间复杂度：O(n^2)
 
-$$
-O(n^2)
-$$
-
-空间复杂度:
-
-$$
-O(n)
-$$
+空间复杂度：O(n)
 
 ```java
 public class Solution {
@@ -47,15 +39,9 @@ public class Solution {
 
 先对数组进行排序，然后再依次向后比对元素，有重复则跳出此次循环。
 
-时间复杂度：
-$$
-O(n^2)
-$$
-空间复杂度：
-$$
-O(1)
-$$
+时间复杂度：O(n^2)
 
+空间复杂度：O(1)
 ```java
 class Solution {
     public int singleNumber(int[] nums) {
@@ -85,15 +71,8 @@ class Solution {
 
 这个应该是最简单的解法，通过异或来比较元素是否相同，只要有一个元素与所有元素都不相同，即可得到结果
 
-时间复杂度:
-$$
-O(n)
-$$
-空间复杂度:
-$$
-O(1)
-$$
-
+时间复杂度:O(n)
+空间复杂度:O(1)
 ```java
 class Solution {
     public int singleNumber(int[] nums) {
