--- a/source/_posts/移动零.md
+++ b/source/_posts/移动零.md
@@ -4,7 +4,7 @@ date: 2019-06-04 15:45:30
 tags: LeetCode
 ---
 
-题目：[移动零][https://leetcode-cn.com/problems/move-zeroes/]
+题目：[移动零](https://leetcode-cn.com/problems/move-zeroes/)
 
 ## 解法一
 
